--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {    
-    background: linear-gradient(to left, black, chartreuse)
+    background: linear-gradient(to left, black, cyan)
 }
 
 #logo {
