--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ nav ul li a {
 nav ul li a::after {
     content: "";
     position: absolute;
-    background-color: chartreuse;
+    background-color: cyan;
     width: 0%;
     height: 3px;
     left: 0;
